tests/palaiologos/fail/integer_bounds/-2^32/rep_putc.asm
rep putc -100000000h
